<?xml version="1.0" encoding="utf-8"?>

<!-- Enable scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<!-- Linear Layout used -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/regTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Field to enter first name -->
        <!-- android:digits in lines 44 and 62 -->
        <!-- limits characters in these fields to letters of the alphabet and white spaces only -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/enter_first_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field to enter last name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/enter_last_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field to enter DOB -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_date_of_birth"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field to enter phone number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field to enter email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field to enter user name -->
        <!-- digits in line 126 accepts letters, numbers, periods, and decimals -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_.0123456789"
                android:hint="@string/enter_user"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field to enter password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button to confirm -->
        <Button
            android:id="@+id/Complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:enabled="true"
            android:onClick="completeReg"
            android:text="@string/confirm"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>