<?xml version="1.0" encoding="utf-8"?>

<!-- Enable scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Field for entering username -->
        <!-- Test username: montclair -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_.0123456789"
                android:hint="@string/enter_user"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Field for entering password -->
        <!-- Test username: testing123 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button to confirm -->
        <Button
            android:id="@+id/Complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:enabled="true"
            android:onClick="completeLogin"
            android:text="@string/confirm"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>